--- a/style/style.css
+++ b/style/style.css
@@ -1,2 +1,34 @@
 @charset "UTF-8";
 
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+}
+
+body {
+    background: url(../imagens/fundo-madeira.jpg) no-repeat center / cover fixed;
+}
+
+main {
+    height: 100vh;
+
+    display: flex;   
+    justify-content: center;
+    align-items: center;
+}
+
+
+section#telefone {
+    position: absolute;
+    height: 454px;
+    width: 225px;
+
+    background: url(../imagens/frame-iphone.png) no-repeat center / cover;
+}
